<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/medium"
    tools:context="com.example.android.inventoryapp.ProductActivity">

    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/new_product_name_label"
                android:layout_width="@dimen/activity_label_width"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/small"
                android:layout_marginLeft="@dimen/small"
                android:layout_marginRight="@dimen/small"
                android:layout_marginStart="@dimen/small"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:text="@string/new_product_name_label" />

            <EditText
                android:id="@+id/new_product_name_value"
                android:layout_width="@dimen/activity_edit_width"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/small"
                android:layout_marginLeft="@dimen/small"
                android:layout_marginRight="@dimen/small"
                android:layout_marginStart="@dimen/small"
                android:inputType="textPersonName|textCapSentences"
                android:imeOptions="actionDone" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/new_product_price_label"
                android:layout_width="@dimen/activity_label_width"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/small"
                android:layout_marginLeft="@dimen/small"
                android:layout_marginRight="@dimen/small"
                android:layout_marginStart="@dimen/small"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:text="@string/new_product_price_label" />

            <EditText
                android:id="@+id/new_product_price_value"
                android:layout_width="@dimen/activity_edit_width"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/small"
                android:layout_marginLeft="@dimen/small"
                android:layout_marginRight="@dimen/small"
                android:layout_marginStart="@dimen/small"
                android:inputType="numberDecimal"
                android:imeOptions="actionDone"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/new_product_size_label"
                android:layout_width="@dimen/activity_label_width"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/small"
                android:layout_marginLeft="@dimen/small"
                android:layout_marginRight="@dimen/small"
                android:layout_marginStart="@dimen/small"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:text="@string/new_product_size_label" />

            <EditText
                android:id="@+id/new_product_size_value"
                android:layout_width="@dimen/activity_edit_width"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/small"
                android:layout_marginLeft="@dimen/small"
                android:layout_marginRight="@dimen/small"
                android:layout_marginStart="@dimen/small"
                android:inputType="number"
                android:imeOptions="actionDone"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/new_product_quantity_label"
                android:layout_width="@dimen/activity_label_width"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/small"
                android:layout_marginLeft="@dimen/small"
                android:layout_marginRight="@dimen/small"
                android:layout_marginStart="@dimen/small"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:text="@string/new_product_quantity_label" />

            <EditText
                android:id="@+id/new_product_quantity_value"
                android:layout_width="@dimen/activity_edit_width"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/small"
                android:layout_marginLeft="@dimen/small"
                android:layout_marginRight="@dimen/small"
                android:layout_marginStart="@dimen/small"
                android:inputType="number"
                android:imeOptions="actionDone"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/new_product_supplier_name_label"
                android:layout_width="@dimen/activity_label_width"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/small"
                android:layout_marginLeft="@dimen/small"
                android:layout_marginRight="@dimen/small"
                android:layout_marginStart="@dimen/small"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:text="@string/new_product_supplier_name_label" />

            <EditText
                android:id="@+id/new_product_supplier_name_value"
                android:layout_width="@dimen/activity_edit_width"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/small"
                android:layout_marginLeft="@dimen/small"
                android:layout_marginRight="@dimen/small"
                android:layout_marginStart="@dimen/small"
                android:inputType="textPersonName"
                android:imeOptions="actionDone"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/new_product_supplier_phone_label"
                android:layout_width="@dimen/activity_label_width"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/small"
                android:layout_marginLeft="@dimen/small"
                android:layout_marginRight="@dimen/small"
                android:layout_marginStart="@dimen/small"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:text="@string/new_product_supplier_phone_label" />

            <EditText
                android:id="@+id/new_product_supplier_phone_value"
                android:layout_width="@dimen/activity_edit_width"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/small"
                android:layout_marginLeft="@dimen/small"
                android:layout_marginRight="@dimen/small"
                android:layout_marginStart="@dimen/small"
                android:inputType="phone"
                android:imeOptions="actionDone"/>
        </LinearLayout>

        <TextView
            android:text="@string/new_product_fields_label"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/small"
            android:textColor="@android:color/holo_red_dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_marginTop="@dimen/large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/new_product_add_image_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/small"
                android:layout_marginLeft="@dimen/small"
                android:layout_marginRight="@dimen/small"
                android:layout_marginStart="@dimen/small"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:text="@string/new_product_add_image_label" />

            <ImageView
                android:id="@+id/new_product_thumbnail"
                android:src="@drawable/image_thumbnail"
                android:contentDescription="@string/description_thumbnail_preview"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:layout_width="@dimen/activity_edit_width"
                android:layout_height="@dimen/activity_label_width"
                android:layout_marginEnd="@dimen/small"
                android:layout_marginLeft="@dimen/small"
                android:layout_marginRight="@dimen/small"
                android:layout_marginStart="@dimen/small" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
