<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/small"
    android:layout_marginTop="2dp"
    android:background="@drawable/shirt_background_item"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/small"
                android:textSize="@dimen/basket_label_text_medium"
                android:textColor="@android:color/black"
                android:text="@string/basket_item_brand_label" />

            <TextView
                android:id="@+id/shop_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/small"
                android:textSize="@dimen/basket_label_text_medium"
                android:textColor="@android:color/black"
                tools:text="T-Shirt Levis" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/small"
            android:textSize="@dimen/basket_label_text_medium"
            android:textColor="@android:color/black"
            android:text="@string/shirt_item_size_label" />
            <TextView
                android:id="@+id/shop_size_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/small"
                android:textSize="@dimen/basket_label_text_medium"
                android:textColor="@android:color/black"
                tools:text="S" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/small"
                android:textSize="@dimen/basket_label_text_medium"
                android:textColor="@android:color/black"
                android:text="@string/basket_item_quantity_label" />
            <TextView
                android:id="@+id/shop_quantity_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/small"
                android:textSize="@dimen/basket_label_text_medium"
                android:textColor="@android:color/black"
                tools:text="14" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:padding="@dimen/x_small">

        <Button
            android:id="@+id/shop_minus"
            android:layout_width="@dimen/shop_button_height"
            android:layout_height="@dimen/shop_button_height"
            android:background="@drawable/icon_minus" />

        <TextView
            android:id="@+id/shop_quantity_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/small"
            android:layout_marginRight="@dimen/small"
            android:padding="@dimen/x_small"
            android:textSize="@dimen/basket_label_text_x_large"
            tools:text="0" />

        <Button
            android:id="@+id/shop_plus"
            android:layout_width="@dimen/shop_button_height"
            android:layout_height="@dimen/shop_button_height"
            android:background="@drawable/icon_plus" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/small"
            android:layout_marginRight="@dimen/x_small"
            android:textColor="@android:color/black"
            android:textSize="@dimen/basket_label_text_large"
            android:text="@string/shirt_item_price_label" />

        <TextView
            android:id="@+id/shop_price_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/x_small"
            android:layout_marginRight="@dimen/x_small"
            android:textColor="@android:color/black"
            android:textSize="@dimen/basket_label_text_large"
            tools:text="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@android:color/black"
            android:textSize="@dimen/basket_label_text_large"
            android:text="@string/dollar_symbol" />

    </LinearLayout>

</LinearLayout>